css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Gluten:wght@300&family=Karla&display=swap');

:root {
  --main-font: 'Karla', sans-serif;
  --modal-title-font: 'Agbalumo', sans-serif;
  --marker-font: 'Gluten', sans-serif;
  --main-clr: rgb(255, 185, 55);
  --background-clr: rgb(40, 40, 40);
  --board-clr: rgb(116, 116, 116);
  --selection-clr: rgb(116, 116, 116);
  --board-size: 300px;
}

::selection {
  background-color: var(--selection-clr);
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: var(--main-font);
  background-color: var(--background-clr);
  color: var(--main-clr);
}

/* Modal rules */

dialog {
  background-color: var(--background-clr);
  color: var(--main-clr);
  border-radius: 16px;
}

.modal-container {
  display: grid;
}

.modal-title {
  font-family: var(--modal-title-font);
  place-self: center;
  font-size: 2rem;
  margin: 16px;
}

dialog form {
  display: grid;
  gap: 8px;
}

form .form-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  column-gap: 16px;
  row-gap: 8px;
}

dialog::backdrop {
  background-color: var(--background-clr);
  backdrop-filter: blur(4px);
}

.form-wrapper p,
.name-label label,
.first-to-label label {
  font-weight: bold;
}

.form-wrapper .name-input {
  grid-area: 2 / 2 / 3 / 4;
}

.form-wrapper .first-to-input {
  grid-column: 2 / 4;
  width: 71px;
}

.form-wrapper.first-to {
  margin-top: 8px;
}

.name-input input,
.name-input input:focus,
.first-to-input input,
.first-to-input input:focus {
  box-sizing: border-box;
  width: 100%;
  outline: none;
  height: 30px;
  font-size: 0.9rem;
  font-family: var(--main-font);
  background-color: var(--main-clr);
  color: black;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid var(--main-clr);
  letter-spacing: 1px;
  font-weight: bold;
}

.first-to-input input {
  text-align: center;
}

div[class^='player'] label[for^='player'] {
  border: 1px solid var(--main-clr);
  background-color: var(--main-clr);
  color: black;
  border-radius: 4px;
  padding: 4px 8px;
  cursor: pointer;
}

dialog input[type='radio'] {
  position: absolute;
  width: 10%;
  appearance: none;
}

input[type='radio']:checked + label {
  font-weight: bolder;
}

.submit-button button,
.restart-button,
#game-over-modal button[type='button'] {
  font-family: var(--main-font);
  font-weight: bold;
  border: 1px solid var(--main-clr);
  background-color: var(--main-clr);
  cursor: pointer;
}

.submit-button button {
  grid-column: 1 / 4;
}

.submit-button button,
#game-over-modal button {
  height: 50px;
  font-size: 1.4rem;
  border-radius: 12px;
  margin-top: 16px;
}

#game-over-modal .modal-container {
  justify-items: center;
}

#game-over-modal p {
  margin: 8px;
}

.winning-player,
.winning-player-marker,
.rounds {
  font-size: 1.5rem;
  font-weight: bold;
}

.winning-player-marker {
  font-weight: normal;
  font-family: var(--marker-font);
}

/* Main page rules */

.container {
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: 1fr 3fr 1fr;
  grid-template-areas:
    '.  header .'
    '.  main   .'
    '.  footer .';
}

header {
  grid-area: header;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  place-items: end center;
  gap: 24px;
  text-align: center;
}

main {
  grid-area: main;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  place-items: center;
  gap: 24px;
}

.container .player-x,
.container .player-o,
.container .first-to-value,
.container .ties-value {
  font-size: 1.5rem;
  font-weight: bold;
}

.score-x,
.score-o {
  align-self: center;
  font-size: 3rem;
  font-weight: bold;
}

footer {
  grid-area: footer;
  place-self: end center;
  text-align: center;
}

.board {
  width: var(--board-size);
  height: var(--board-size);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.square {
  box-sizing: border-box;
  width: calc(var(--board-size) / 3);
  height: calc(var(--board-size) / 3);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.marker,
.hoverable-x,
.hoverable-o {
  font-family: var(--marker-font);
  font-size: 7rem;
}

footer a[href="https://github.com/dziubenzo"]
{
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: 0 4px;
}

footer img {
  height: 14px;
  width: 14px;
}

footer a[href="https://icons8.com/"]
{
  text-decoration: none;
  color: var(--main-clr);
}

.restart-button {
  position: fixed;
  bottom: 16px;
  right: 24px;
  height: 70px;
  width: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  font-size: 1rem;
  color: black;
}

div[data-id='1'],
div[data-id='2'],
div[data-id='4'],
div[data-id='5'],
div[data-id='7'],
div[data-id='8'] {
  border-right: 5px solid var(--board-clr);
}

div[data-id='1'],
div[data-id='2'],
div[data-id='3'],
div[data-id='4'],
div[data-id='5'],
div[data-id='6'] {
  border-bottom: 5px solid var(--board-clr);
}

.winner {
  color: green;
}

.hoverable-x:hover::before {
  content: 'x';
  opacity: 0.5;
}

.hoverable-o:hover::before {
  content: 'o';
  opacity: 0.5;
}

@media (width <= 768px) {
  :root {
    --board-size: 200px;
  }

  .container {
    grid-template-rows: repeat(3, 1fr);
    grid-template-areas:
      'header  header header'
      'main    main   main'
      'footer  footer footer';
  }

  header {
    grid-template-columns: 2fr 1fr 2fr;
    place-items: center;
  }

  header p[class='player-x'] {
    place-self: end start;
    padding-left: 8px;
    padding-bottom: 24px;
  }

  header p[class='player-o'] {
    place-self: end end;
    padding-right: 8px;
    padding-bottom: 24px;
  }

  header p[class='ties-value'] {
    padding-bottom: 24px;
  }

  main {
    gap: 12px;
  }

  .restart-button {
    position: fixed;
    right: 6px;
    height: 50px;
    width: 50px;
    font-size: 0.8rem;
  }

  .marker {
    font-size: 4rem;
  }

  .hoverable-x:hover::before,
  .hoverable-o:hover::before {
    content: none;
    opacity: none;
  }

  .score-x,
  .score-o {
    font-size: 2rem;
  }

  .score-x {
    justify-self: end;
  }

  .score-o {
    justify-self: start;
  }

  .container .player-x,
  .container .player-o,
  .container .first-to-value,
  .container .ties-value {
    font-size: 1.1rem;
    margin-bottom: 0;
  }
}

